button outline fix (before could be easily rewritten by default styles) + flexbox arrows visibility + build

--- a/assets/src/scss/main/buttons.scss
+++ b/assets/src/scss/main/buttons.scss
@@ -101,6 +101,8 @@
     .wp-block-button__link {
       box-shadow: 0 0 0 3px var(--wp--preset--color--secondary) inset;
       opacity: .9;
+      border: 0;
+      padding: ($button__height  * .4) ($button__height  * .6);
 
       &:not(.has-background) {
         background: transparent;
