--- a/assets/src/scss/utils/icons.scss
+++ b/assets/src/scss/utils/icons.scss
@@ -87,7 +87,7 @@ $arrowSize: 60px;
 
 .arrow {
   position:absolute;
-  z-index: 10;
+  z-index: 100000;
   border-radius: 50%;
   margin: 0 auto;
   padding: $arrowSize * .25;
